--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,6 +2,9 @@ name: Build & Publish Burp Suite Add-On
 
 on:
   push:
+    paths-ignore:
+      - '**.md'
+      - 'docs/**'
     branches: [main]
   pull_request:
     branches: [main]
